fix muon tra